feat:sql done
